--- a/css/main.css
+++ b/css/main.css
@@ -221,6 +221,36 @@ em {
   margin: 0 0.3em 0 0;
 }
 
+.floating {
+  position: relative;
+  text-align: right;
+}
+.caption {
+  position: relative;
+  margin-left: auto;
+  margin-right: 0;
+  background-color: rgba(0,0,0,0.7);
+  color: white;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  font-size: 10pt;
+  font-style: italic;
+}
+.caption a:link, .caption a:visited, .caption a:hover, .caption a:active
+{
+  color: white;
+}
+.caption a:link, .caption a:visited, .caption a:active
+{
+  text-decoration-line: none;
+}
+.caption a:hover
+{
+  text-decoration-line: underline;
+}
+
 .wauto { display: inline-flex; }
 .w05 { width: 05%; }
 .w10 { width: 10%; }
@@ -251,6 +281,25 @@ em {
 .w90 { width: 90%; }
 .w95 { width: 95%; }
 .w100 { width: 100%; }
+
+.w05px { width: 05px; }
+.w10px { width: 10px; }
+.w15px { width: 15px; }
+.w20px { width: 20px; }
+.w25px { width: 25px; }
+.w30px { width: 30px; }
+.w40px { width: 40px; }
+.w50px { width: 50px; }
+.w60px { width: 60px; }
+.w70px { width: 70px; }
+.w80px { width: 80px; }
+.w90px { width: 90px; }
+.w100px { width: 100px; }
+.w200px { width: 200px; }
+.w300px { width: 300px; }
+.w400px { width: 400px; }
+.w500px { width: 500px; }
+
 
 
 .vspace {
@@ -487,6 +536,12 @@ span.mermaid.shadow {
   margin-bottom: 0.1em;
   display: block;
 }
+.block > .title { /* TODO */
+  display: block;
+  font-style: bold;
+  font-size: 14pt;
+  background-color
+}
 
 .block {
 /*  border: 0.15em solid rgba(150,150,255,0.3); */
@@ -496,6 +551,48 @@ span.mermaid.shadow {
 .alert {
 /*  border: 0.15em solid rgba(255,150,150,0.3); */
   background: rgba(255,150,150,0.4);
+}
+.centering {
+  text-align: center;
+}
+/* ======================== */
+/* ======= Dropdown ======= */
+/* ======================== */
+.dd-text, .dd-button {
+  position: relative;
+  color: #884411;
+  text-decoration: underline;
+}
+
+.dd-text {
+  display: inline-block;
+}
+
+.dd-button {
+  display: inline-block;
+  background-color: rgba(200,200,200,1.0);
+  border: 0.05em solid #000000;
+  border-radius: 5px;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
+}
+.dd-text:hover {
+  background-image: linear-gradient(transparent, rgba(130, 130, 250, 1.0), transparent);
+}
+
+.dd-content {
+  display: none;
+  position: absolute;
+  background-color: rgba(0,0,0,0.7);
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+  padding: 3px 3px;
+  border-radius: 5px;
+  color: white;
+}
+
+.dd-text:hover .dd-content, .dd-button:hover .dd-content {
+  display: block;
+  overflow: visible;
 }
 
 /* ======================== */
